--- a/localisation/english/MD_africa_events_l_english.yml
+++ b/localisation/english/MD_africa_events_l_english.yml
@@ -230,7 +230,7 @@
 
  senegal_md.10.t: "The Independence of Casamance"
  senegal_md.10.d: "In a dramatic turn of events, Senegal has decided to let the Casamance people have self-determination. The region has now been freed from their control and has now been allowed to form its own government. It is an interesting turn of policy given the length of the conflict."
- senegal_md.10.a: "Freedom for Casamanace"
+ senegal_md.10.a: "Freedom for Casamance"
 
  # End of the Senegalese Civil War
  senegal_md.11.t: "End of the [SEN.GetAdjective] Civil War"
