Squashed commit of the GFX input

--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -97,8 +97,8 @@
  cuba_news.29.t: "Cuban Army training with NATO"
  cuba_news.29.d: "Today, the exercises between Cuba and NATO countries officially began, the parties agreed to expand military cooperation and strengthen the protection of Cuba's democracy and freedom. Also, a US army base will be established on the territory of Cuba to ensure the security of the island"
  cuba_news.29.a: "Cuba has become pro-Western..."
- cuba_news.30: "Cuba returned Guantanamo"
- cuba_news.30.t: "Cuba returned Guantanamo"
+ cuba_news.30: "Cuba took back Guantanamo"
+ cuba_news.30.t: "Cuba took back Guantanamo"
  cuba_news.30.d: "The American delegation has agreed to bring the port of Guantanamo under Cuban control"
  cuba_news.30.a: "Interesting.."
  cuba.26: "They agreed"
