--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -1535,17 +1535,17 @@
  tech_turret_missiles_aa_4_desc: "Anti-Air Missiles describes the Rolling Airframe Missiles (RAM) as well as generic SAM launchers."
  tech_turret_missiles_aa_5: "Anti-Air Missiles 2045"
  tech_turret_missiles_aa_5_desc: "Anti-Air Missiles describes the Rolling Airframe Missiles (RAM) as well as generic SAM launchers."
- tech_vls_surface: "VLS Surface-Attack 1975"
+ tech_vls_surface: "VLS Surface-Attack Missiles 1975"
  tech_vls_surface_desc: "Vertical Launch System Missiles designed to strike targets on the surface."
- tech_vls_surface_1: "VLS Surface-Attack 1985"
+ tech_vls_surface_1: "VLS Surface-Attack Missiles 1985"
  tech_vls_surface_1_desc: "Vertical Launch System Missiles designed to strike targets on the surface."
- tech_vls_surface_2: "VLS Surface-Attack 2000"
+ tech_vls_surface_2: "VLS Surface-Attack Missiles 2000"
  tech_vls_surface_2_desc: "Vertical Launch System Missiles designed to strike targets on the surface."
- tech_vls_surface_3: "VLS Surface-Attack 2015"
+ tech_vls_surface_3: "VLS Surface-Attack Missiles 2015"
  tech_vls_surface_3_desc: "Vertical Launch System Missiles designed to strike targets on the surface."
- tech_vls_surface_4: "VLS Surface-Attack 2030"
+ tech_vls_surface_4: "VLS Surface-Attack Missiles 2030"
  tech_vls_surface_4_desc: "Vertical Launch System Missiles designed to strike targets on the surface."
- tech_vls_surface_5: "VLS Surface-Attack 2045"
+ tech_vls_surface_5: "VLS Surface-Attack Missiles 2045"
  tech_vls_surface_5_desc: "Vertical Launch System Missiles designed to strike targets on the surface."
  tech_vls_aa: "VLS Surface-to-Air Missiles 1975"
  tech_vls_aa_desc: "Vertical Launch System Surface-to-Air Missiles strikes enemy air targets from the surface."
