--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -704,7 +704,7 @@
  war.0.a: "Worrying."
 
  Def_Spending_Warning.0.t: "[From.GetName] Has Increased their military spending!"
- Def_Spending_Warning.0.d: "§RTHIS IS A MAJOR EVENT FOR TESTING TO SEE WHO CHANGES THEIR MIL SPENDING§ \n\n [From.GetName] military spending has increase a lot recently, it's now much higher than ours! This is very worrying, we should keep an eye out to see what their up to."
+ Def_Spending_Warning.0.d: "§RTHIS IS A MAJOR EVENT FOR TESTING TO SEE WHO CHANGES THEIR MIL SPENDING§! \n\n [From.GetName] military spending has increase a lot recently, it's now much higher than ours! This is very worrying, we should keep an eye out to see what their up to."
  Def_Spending_Warning.0.a: "Oh no."
 
  anti_bully.1.t: "You shouldn't see this event"
