--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -909,7 +909,7 @@
  brigade_structure: "Brigade Combat Teams"
  brigade_structure_desc: "By building smaller, but mixed brigades, we can maximize the capabilities of our units."
  division_structure: "Division Organization"
- division_structure_desc: "By utilizing unified division structures, we can better concentrate and directed our combat arms units."
+ division_structure_desc: "By utilizing unified division structures, we can better concentrate and direct our combat arms units."
  infantry_formations: "Infantry Combat Teams"
  infantry_formations_desc: "Infantry units will form the backbone of our military, allowing them to fight in any terrain effectively, and strike hard at our opponents."
  combined_arms_formations: "Mechanized Combat Teams"
