--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -1750,13 +1750,13 @@
  TT_RABBANI_ADMINISTRATION: "[Neutral_Muslim_Brotherhood_L] becomes the ruling party\n"
  TT_SHAH_ADMINISTRATION: "The [Monarchist_L] is put back in power\n"
 
- AfghanistanBorderWars.1.t: "event_target:AFG_ATTACKER.GetName Wins Border War"
- AfghanistanBorderWars.1.d: "event_target:AFG_ATTACKER.GetName has won the border war against event_target:AFG_DEFENDER.GetName and advanced into new land. They are likely to continue their offensive after this."
+ AfghanistanBorderWars.1.t: "[event_target:AFG_ATTACKER.GetName] Wins Border War"
+ AfghanistanBorderWars.1.d: "[event_target:AFG_ATTACKER.GetName] has won the border war against [event_target:AFG_DEFENDER.GetName] and advanced into new land. They are likely to continue their offensive after this."
  AfghanistanBorderWars.1.a: "Huzzah!"
  AfghanistanBorderWars.1.b: "Damn!"
  AfghanistanBorderWars.1.c: "Escalate!"
- AfghanistanBorderWars.2.t: "event_target:AFG_ATTACKER.GetName Loses Border War"
- AfghanistanBorderWars.2.d: "event_target:AFG_ATTACKER.GetName has lost the border war against event_target:AFG_DEFENDER.GetName."
+ AfghanistanBorderWars.2.t: "[event_target:AFG_ATTACKER.GetName] Loses Border War"
+ AfghanistanBorderWars.2.d: "[event_target:AFG_ATTACKER.GetName] has lost the border war against [event_target:AFG_DEFENDER.GetName]."
  AfghanistanBorderWars.2.a: "Huzzah!"
  AfghanistanBorderWars.2.b: "Damn!"
  AfghanistanNews.1.t: "Civil War in Afghanistan Quiets Down"
