--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -907,7 +907,7 @@
  taiwan.12.a: "A poor choice on their part."
  taiwan.13.t: "Taoyuan Flight Attendants Union strike"
  taiwan.13.d: "The Taoyuan Flight Attendants Union, representing some 2500 cabin crew from China Airlines, stage there first strike in Taiwanese aviation history. A total of 122 China Airlines-passenger flights from Taoyuan International Airport and Taipei Songshan Airport are now cancelled as a result and left 20,000 passengers stranded. The Union presented us seven demands to accept for better working conditions."
- taiwan.13.a: "Accept there demands"
+ taiwan.13.a: "Accept their demands"
  taiwan.13.b: "We never back down"
  taiwan.14.t: "Strike failed"
  taiwan.14.d: "After we denied their demands the strike broke soon away. Everyone is going back to work now."
@@ -1155,8 +1155,8 @@
  cyber.4.d: "Luckily for us, attempts by foreign agents to hack into our systems have failed. We should continually upgrade our cyber security infrastructure to ensure that hackers continue failing to steal classified information or manipulate our politics."
  cyber.4.a: "Our investments in cyber security have paid off."
 
- cyber.5.t: "We have successfully targeted Taiwanese citizens with our propaganda!"
- cyber.5.d: "Now that we have managed to infiltrate social media websites and forums used by people from this country, we can choose whether we wish to use this propaganda to increase our influence in the country or to manipulate the country's politics."
+ cyber.5.t: "Our propaganda has successfully influenced the citizens of Taiwan!"
+ cyber.5.d: "Now that we have managed to infiltrate social media websites and forums used by people from this isle, we can choose whether we wish to use this propaganda to increase our influence in the country or to manipulate the country's politics."
  cyber.5.a: "We need to increase our influence!"
  cyber.5.b: "We should support the KMT!"
 
