--- a/localisation/english/tactics_l_english.yml
+++ b/localisation/english/tactics_l_english.yml
@@ -13,12 +13,14 @@
  tactic_flexible_lines: "Flexible Lines"
  tactic_dedicated_emplacements: "Dedicated Emplacements"
  tactic_thunder_run: "Thunder Run"
+ tactic_thunder_run_breakthrough: "Offensive Breakthrough"
  tactic_thunder_run_push: "Offensive Push"
  tactic_thunder_run_maneuver: "Aggressive Maneuvering"
  tactic_thunder_run_retreat: "Defensive Break"
  tactic_thunder_run_delay: "Delaying Actions"
  tactic_deep_battle_push: "Breakthrough Push"
  tactic_deep_battle_assault: "Armored Assault"
+ tactic_deep_battle_breakthrough: "Armored Breakthrough"
  tactic_deep_battle_encirclement: "Deep Strike"
  tactic_deep_battle_rush: "Mechanized Rush"
  tactic_deep_battle_retreat: "Break Contact"
