--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -1035,7 +1035,7 @@
  probing_attacks: "Probing Attacks"
  probing_attacks_desc: "Using careful, limited attacks, with close observation by recon elements, we will use our offensives to find weaknesses in the enemy lines, and exploit them."
  recon_in_force: "Reconnaissance In Force"
- recon_in_force_desc: "Using offensive actions, with larger forces, our attacks with gather us valuable intelligence on enemy forces and distributions."
+ recon_in_force_desc: "Using offensive actions, with larger forces, our attacks will allow us to gather valuable intelligence on enemy forces and enemy distribution."
  force_reconassiance: "Dedicated Recon Teams"
  force_reconassiance_desc: "Utilizing teams whose job is to go out and observe, our forces will gain valuable intelligence to be exploited once a battle actually begins."
  offensive_fires: "Offensive Fire Support"
