--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -823,7 +823,7 @@
  infantry_mass_assault: "Infantry Mass Assault"
  infantry_mass_assault_desc: "Using human wave tactics, massed infantry formations, and mass charges, will with overrun enemy positions under a weight of bodies."
  early_guerilla_warfare: "Early Guerilla Warfare"
- early_guerilla_warfare_desc: "Using hit and run tactics, and fighting with unconventional strategies, we can outwit and outlast a militarily superior foe."
+ early_guerilla_warfare_desc: "Using hit and run tactics, and fighting with unconventional strategies, we can defeat a militarily superior enemy and prolong the battle."
  Military_Technology_Doctrine: "Military Technology Doctrine"
  Military_Technology_Doctrine_desc: "As warfare advances into the 21st Century, the rapid advances in technology provide avenues for military exploitation. Both off the shelf components, and cutting edge technological wonders, allow a military force to significantly enhance it's fighting capabilities."
  high_tech_doctrine: "High Technology Military"
