--- a/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
@@ -83,8 +83,8 @@
  cuba_news.29.t: "古巴军队与北约一起训练"
  cuba_news.29.d: "今天，古巴与北约国家演习正式开始，双方同意扩大军事合作，加强对古巴民主自由的保护。此外，还将在古巴境内设立美军基地，以确保该岛的安全。"
  cuba_news.29.a: "古巴已经变得亲西方了..."
- cuba_news.30: "古巴收返关塔那摩"
- cuba_news.30.t: "古巴收返关塔那摩"
+ cuba_news.30: "古巴收回关塔那摩"
+ cuba_news.30.t: "古巴收回关塔那摩"
  cuba_news.30.d: "美国代表团同意将关塔那摩港置于古巴控制之下。"
  cuba_news.30.a: "有趣"
  cuba.26: "他们同意了"
