--- a/localisation/simp_chinese/MD_focus_SWI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SWI_l_simp_chinese.yml
@@ -128,7 +128,7 @@
  SWI_german_trade_deals: "德国贸易协定"
  SWI_german_trade_deals_desc: "随着我们与北方的邻国签订更多的贸易条约，我们与他们的关系会进一步增强。"
  tooltip_SWI_seek_eu_membership: "§Y[ROOT.GetNameWithFlag]§!投资欧洲单一市场：§Y[EUU.GetFlag]欧洲联盟贸易政策领导人§!（依照这个顺序§Y欧盟委员会主席§!，§Y欧洲理事会主席§!，§Y欧洲议会主席§!）得到了来自§Y[ROOT.GetNameWithFlag]§!的§Y国际投资§!。\n"
- tooltip_SWI_european_investment_opportunities: "§Y[EUU.GetFlag]欧洲联盟贸易政策领导人§!（依照这个顺序：）§Y欧盟委员会主席§!，§Y欧洲理事会主席§!，§Y欧洲议会主席§!）投资于§Y[ROOT.GetNameWithFlag]§!。\n"
+ tooltip_SWI_european_investment_opportunities: "§Y[EUU.GetFlag]欧洲联盟贸易政策领导人§!（依照这个顺序：§Y欧盟委员会主席§!，§Y欧洲理事会主席§!，§Y欧洲议会主席§!）投资于§Y[ROOT.GetNameWithFlag]§!。\n"
  switzerland.2.t: "瑞士政治模式的终结"
  switzerland.2.d: "瑞士的民主曾被视为一个榜样，也是所有因给予瑞士公民的可能性而寻求更多民众参与政府的人的一颗闪亮的激励之星，现在已经不复存在。\n\n瑞士领导人[SWI.GetLeader]已经宣布，这些“分散公共生活注意力”和“不必要的全民投票”将停止发生。"
  switzerland.2.o1: "可算摆脱了"
@@ -203,7 +203,7 @@
  SWI_idea_armed_forces3_desc: "[ROOT.GetName]武装力量是国家的军事力量和国家的捍卫者。"
  SWI_idea_armed_forces4: "[ROOT.GetNameWithFlag]武装力量"
  SWI_idea_armed_forces4_desc: "[ROOT.GetName]武装力量是国家的军事力量和国家的捍卫者。"
- SWI_join_un_tt: "§Y我们将加入§!§4联合国§!§Y并且我们在§!§4联合国安理会§!§Y成员国关系将提升！§!"
+ SWI_join_un_tt: "§Y我们将加入§!§4联合国§!§Y并且我们与§!§4联合国安理会§!§Y成员国的关系将提升！§!"
  SWI_can_declare_war_now_tt: "§Y现在我们可以§Y对其他国家§!§R宣战§!§!"
  SWI_additional_military_facilities_tt: "§Y如果§![ROOT.GetNameWithFlag]§Y控制§![AUS.GetNameWithFlag]§Y，我们将获得更多设施！§!"
  SWI_french_forts_tt: "§Y我们将在§4[FRA.GetNameWithFlag]§!边境修建防御碉堡§!"
