--- a/localisation/simp_chinese/equipment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/equipment_l_simp_chinese.yml
@@ -206,30 +206,12 @@
  Rec_tank_desc: "装甲侦察是地面侦察与士兵使用坦克、轮式或履带式装甲侦察车进行的装甲战相结合。"
  Rec_tank_0: "1965型轻型坦克"
  Rec_tank_0_desc: "轻型坦克是二战军队的主力，但现在只用于外围任务，主战坦克的重量和尺寸阻碍了它们的使用。轻型坦克由装甲最厚重的侦察部队使用，还具有可空投的优势，也经常用于两栖任务。它们通常基于步兵战车车体，而不是从头开始设计。它们在恶劣地形（如山区和森林）中的表现比主战坦克好得多。"
- Amph_light_tank_hull: "两栖轻型坦克"
- Amph_Rec_tank_0: "两栖轻型坦克"
- Amph_Rec_tank_0_desc: ""
- Air_light_tank_hull: "空降轻型坦克"
- Air_Rec_tank_0: "空降轻型坦克"
- Air_Rec_tank_0_desc: ""
  Rec_tank_1: "1985型轻型坦克"
  Rec_tank_1_desc: "轻型坦克是二战军队的主力，但现在只用于外围任务，主战坦克的重量和尺寸阻碍了它们的使用。轻型坦克由装甲最厚重的侦察部队使用，还具有可空投的优势，也经常用于两栖任务。它们通常基于步兵战车车体，而不是从头开始设计。它们在恶劣地形（如山区和森林）中的表现比主战坦克好得多。"
- Amph_Rec_tank_1: "两栖轻型坦克 I"
- Amph_Rec_tank_1_desc: ""
- Air_Rec_tank_1: "空降轻型坦克 I"
- Air_Rec_tank_1_desc: ""
  Rec_tank_2: "2005型轻型坦克"
  Rec_tank_2_desc: "轻型坦克是二战军队的主力，但现在只用于外围任务，主战坦克的重量和尺寸阻碍了它们的使用。轻型坦克由装甲最厚重的侦察部队使用，还具有可空投的优势，也经常用于两栖任务。它们通常基于步兵战车车体，而不是从头开始设计。它们在恶劣地形（如山区和森林）中的表现比主战坦克好得多。"
- Amph_Rec_tank_2: "两栖轻型坦克 II"
- Amph_Rec_tank_2_desc: ""
- Air_Rec_tank_2: "空降轻型坦克 II"
- Air_Rec_tank_2_desc: ""
  Rec_tank_3: "2015型轻型坦克"
  Rec_tank_3_desc: "轻型坦克是二战军队的主力，但现在只用于外围任务，主战坦克的重量和尺寸阻碍了它们的使用。轻型坦克由装甲最厚重的侦察部队使用，还具有可空投的优势，也经常用于两栖任务。它们通常基于步兵战车车体，而不是从头开始设计。它们在恶劣地形（如山区和森林）中的表现比主战坦克好得多。"
- Amph_Rec_tank_3: "两栖轻型坦克 III"
- Amph_Rec_tank_3_desc: ""
- Air_Rec_tank_3: "空降轻型坦克 III"
- Air_Rec_tank_3_desc: ""
  Rec_tank_4: "2025型轻型坦克"
  Rec_tank_4_desc: "轻型坦克是二战军队的主力，但现在只用于外围任务，主战坦克的重量和尺寸阻碍了它们的使用。轻型坦克由装甲最厚重的侦察部队使用，还具有可空投的优势，也经常用于两栖任务。它们通常基于步兵战车车体，而不是从头开始设计。它们在恶劣地形（如山区和森林）中的表现比主战坦克好得多。"
  Rec_tank_5: "2035型轻型坦克"
@@ -333,15 +315,15 @@
  attack_helicopter_hull_desc: "攻击直升机是一种主要充当攻击机的武装直升机，能够攻击地面目标，例如敌方步兵和装甲战车。由于装备重型武器，它们有时被称为武装直升机。"
  attack_helicopter_desc: "攻击直升机是为支援地面部队而设计的武装直升机。它们对付装甲车辆和没有空中掩护的部队非常有效，能够快速对付没有适当对抗措施的敌人。然而，攻击直升机在战斗机和防空武器面前非常脆弱。"
  attack_helicopter1: "ATKH 1965"
- attack_helicopter1_desc: ""
+ attack_helicopter1_desc: "攻击直升机是装备了进攻性武器的军用直升机，，其主要武器为速射自动武器（机炮和机枪）、火箭炮以及精确制导武器（导弹），很多攻击直升机也可以装备对空导弹，但主要用于自卫。当今的攻击直升机在功能上与固定翼攻击机类似，专门用于攻击地面目标如步兵、装甲车辆和建筑。"
  attack_helicopter2: "1985型攻击直升机"
- attack_helicopter2_desc: ""
+ attack_helicopter2_desc: "攻击直升机是装备了进攻性武器的军用直升机，，其主要武器为速射自动武器（机炮和机枪）、火箭炮以及精确制导武器（导弹），很多攻击直升机也可以装备对空导弹，但主要用于自卫。当今的攻击直升机在功能上与固定翼攻击机类似，专门用于攻击地面目标如步兵、装甲车辆和建筑。"
  attack_helicopter3: "2005型攻击直升机"
- attack_helicopter3_desc: ""
+ attack_helicopter3_desc: "攻击直升机是装备了进攻性武器的军用直升机，，其主要武器为速射自动武器（机炮和机枪）、火箭炮以及精确制导武器（导弹），很多攻击直升机也可以装备对空导弹，但主要用于自卫。当今的攻击直升机在功能上与固定翼攻击机类似，专门用于攻击地面目标如步兵、装甲车辆和建筑。"
  attack_helicopter4: "2015型攻击直升机"
- attack_helicopter4_desc: ""
+ attack_helicopter4_desc: "攻击直升机是装备了进攻性武器的军用直升机，，其主要武器为速射自动武器（机炮和机枪）、火箭炮以及精确制导武器（导弹），很多攻击直升机也可以装备对空导弹，但主要用于自卫。当今的攻击直升机在功能上与固定翼攻击机类似，专门用于攻击地面目标如步兵、装甲车辆和建筑。"
  attack_helicopter5: "2035型攻击直升机"
- attack_helicopter5_desc: ""
+ attack_helicopter5_desc: "攻击直升机是装备了进攻性武器的军用直升机，，其主要武器为速射自动武器（机炮和机枪）、火箭炮以及精确制导武器（导弹），很多攻击直升机也可以装备对空导弹，但主要用于自卫。当今的攻击直升机在功能上与固定翼攻击机类似，专门用于攻击地面目标如步兵、装甲车辆和建筑。"
  submarine_1: "潜艇工程"
  submarine_1_desc: "研究这项技术将允许我们研究更先进的潜艇。"
  attack_submarine: "攻击型潜艇"
