--- a/localisation/simp_chinese/tactics_l_simp_chinese.yml
+++ b/localisation/simp_chinese/tactics_l_simp_chinese.yml
@@ -121,3 +121,5 @@
  tactic_counter_fireforce: "火力部队"
  tactic_counter_perimeter_defence: "边境防御"
  tactic_counter_tunnel_rats: "隧道鼠战"
+ tactic_thunder_run_breakthrough: "进攻突破"
+ tactic_deep_battle_breakthrough: "装甲突破"
