--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1565,7 +1565,7 @@
  arunachal_war.2.a: "So is the nature of things."
  
  arunachal_war.3.t: "Failure attack simulation"
- arunachal_war.3.d: "During recent feint manouvers we were shelled by unknown opponent. The exact reasoning could not be determined and many uneasy questions are being asked."
+ arunachal_war.3.d: "During recent feint maneuvers we were shelled by unknown opponent. The exact reasoning could not be determined and many uneasy questions are being asked."
  arunachal_war.3.a: "As bad as it gets."
  
  arunachal_war.4.t: "Attack cancelled"
