--- a/localisation/english/MD_focus_ITA_l_english.yml
+++ b/localisation/english/MD_focus_ITA_l_english.yml
@@ -2309,7 +2309,7 @@
  one_time_paycheck_bonus: "One-Time paycheck bonus"
  one_time_paycheck_bonus_desc: "With the excuse of stimulating internal consumpation we can place a significant one-time bonus in our workers paycheck to raise our popularity."
  economic_concessions_to_oppositions: "Economic concessions to oppositions"
- economic_concessions_to_oppositions_desc: "Addressing the concerns of the opposing parties powerbases might secure us the political room to manouver."
+ economic_concessions_to_oppositions_desc: "Addressing the concerns of the opposing parties powerbases might secure us the political room to maneuver."
  extraordinary_church_donation: "Extraordinary Church Donation"
  call_in_favours_with_unions: "Call in Favours with Labour Unions"
  encourage_international_investments: "Encourage International Investments"
