--- a/localisation/english/MD_focus_RAJ_l_english.yml
+++ b/localisation/english/MD_focus_RAJ_l_english.yml
@@ -692,7 +692,7 @@
  kasmir_war.2.d: "During recent military exercises there was an accident that left several soldiers wounded as long as some equipment damaged."
  kasmir_war.2.a: "So is the nature of things."
  kasmir_war.3.t: "Failure attack simulation"
- kasmir_war.3.d: "During recent feint manouvers we were shelled by unknown opponent. The exact reasoning could not be determined and many uneasy questions are being asked."
+ kasmir_war.3.d: "During recent feint maneuvers we were shelled by unknown opponent. The exact reasoning could not be determined and many uneasy questions are being asked."
  kasmir_war.3.a: "As bad as it gets."
 
  kasmir_war.10.t: "Successful push"
