--- a/localisation/english/MD_focus_AZE_l_english.yml
+++ b/localisation/english/MD_focus_AZE_l_english.yml
@@ -480,7 +480,7 @@
  AZE_New_army_core_desc: "New, professional army core will ensure that we remain independent"
  AZE_Professional_army: "Professional Army"
  AZE_Professional_army_desc: "Army is not a joke, but serious business, lets quick it professional"
- AZE_Army_maneuvers: "Army maneuvers"
+ AZE_Army_maneuvers: "Army Maneuvers"
  AZE_Army_maneuvers_desc: "Army needs to flex its muscles from time to time to not get rusty"
  AZE_Air_dominance: "Air Dominance"
  AZE_Air_dominance_desc: "We need to ensure that we have air dominance in our skies"
