--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1390,7 +1390,7 @@
  
  china_news.34.t: "Mainland China announces military solution of Taiwan situation"
  china_news.34.d: "The People's Republic of China declared war on Taiwan on the grounds that the Taiwan authorities declared independence and split the Chinese territory. A spokesman for the Ministry of Foreign Affairs said that "no one can take away China's sacred territory of Taiwan.""
- china_news.34.a: "We must prepare for the worst.。"
+ china_news.34.a: "We must prepare for the worst."
  china_news.34.b: "There is no other option."
  china_news.34.c: "Millions of people will die over this long conflict."
  
@@ -1402,7 +1402,7 @@
  
  china_news.36.t: "Mainland China announces military solution of Taiwan situation"
  china_news.36.d: "The People's Republic of China declared war on Taiwan on the grounds that the Taiwan authorities join Nato and split the Chinese territory. A spokesman for the Ministry of Foreign Affairs said that "no one can take away China's sacred territory of Taiwan.""
- china_news.36.a: "We must prepare for the worst.。"
+ china_news.36.a: "We must prepare for the worst."
  china_news.36.b: "There is no other option."
  china_news.36.c: "Millions of people will die over this long conflict."
  
