--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -610,8 +610,8 @@
  CHI_zhejiang_megacity_desc: "The emerging IT industry of Hangzhou Alibaba Group gave birth to the Zhejiang metropolitan area, which will lead the transformation of China's economy to high value-added industries."
  CHI_Taiwan_Megalopolis: "Taiwan Megalopolis"
  CHI_Taiwan_Megalopolis_desc: "Taiwan is the screen guardian of South China and is also a world-renowned economically developed region. After reunification, Taiwan will be the shining pearl of Greater China."
- CHI_Go_West_Strategy: "Western Development Strategy"
- CHI_Go_West_Strategy_desc: "While China's coastal East has seen rapidly development following Deng Xiaoping's policy of \"reform and opening up\", the much more rural, sparsely populated West has not seen the same rapid improvement. We should seek to redress this inequality."
+ CHI_Western_Development_Strategy: "Western Development Strategy"
+ CHI_Western_Development_Strategy_desc: "While China's coastal East has seen rapidly development following Deng Xiaoping's policy of \"reform and opening up\", the much more rural, sparsely populated West has not seen the same rapid improvement. We should work hard to correct this inequality and achieve balanced development among all regions."
  CHI_Qinghai_Tibet_Railway: "Qinghai-Tibet Railway"
  CHI_Qinghai_Tibet_Railway_desc: "Tibet is an essential and inviolable part of China, but the lack of sophisticated transport networks between the Tibetan region and the rest of China hinders its integration. Investing in the railway between Tibet and the neighbouring province of Qinghai will ameliorate this situation."
  CHI_Southwest_Railway: "Southwest Railway"
@@ -1141,7 +1141,7 @@
  china.43.a: "And so we gain."
  
  china.44.t: "[CHI.Capital.GetName] Rejects!"
- china.44.d: "Instead of receving a letter of acceptance we were given a short response nearly insulting our leadership for \"Thinking of such a ridiculous idea\"."
+ china.44.d: "Instead of receiving a letter of acceptance we were given a short response nearly insulting our leadership for \"Thinking of such a ridiculous idea\"."
  china.44.a: "Too bad."
  
  china.45.t: "Maybe Too Fast"
