--- a/localisation/english/MD_missiles_gui_l_english.yml
+++ b/localisation/english/MD_missiles_gui_l_english.yml
@@ -39,9 +39,9 @@
  #
  TRAJECTORY_GUI_DELETE_BUTTON_TT: "Delete current trajectory selection."
  TARGET_SELECTION_BUTTON_TT: "§7Strategic Strike§!"
- TARGET_SELECTION_BUTTON_delayed_TT: "§7Strategic Strikes§! will damage enemy buildings in the target state.\n\nNote: nuclear warheads will always damage both buildings and units."
+ TARGET_SELECTION_BUTTON_delayed_TT: "§7Strategic Strikes§! will damage enemy buildings in the target state.\n\nNote: Nuclear warheads will always damage both buildings and units."
  TARGET_SELECTION_2_BUTTON_TT: "§7Tactical Strike§!"
- TARGET_SELECTION_2_BUTTON_delayed_TT: "§7Tactical Strikes§! will damage enemy divisions in the target state.\n\nNote: nuclear warheads will always damage both buildings and units."
+ TARGET_SELECTION_2_BUTTON_delayed_TT: "§7Tactical Strikes§! will damage enemy divisions in the target state.\n\nNote: Nuclear warheads will always damage both buildings and units."
  MISSILE_MODEL_NAME: "[missile_type_tech_loc]"
  MISSILE_MODEL_NAME_SELECTED: "[missile_type_selected_loc]"
  MISSILE_MODEL_INVENTORY_SELECTED: "£GFX_inventory_texticon  [?var_inventory]"
