--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -735,8 +735,8 @@
  CUB_controlling_oposition_desc: "It's cool to be a dictator, but we were trying to make it look like a democracy, and you need opposition there."
  CUB_trade_with_north: "Trade with DPRK"
  CUB_trade_with_north_desc: "The DPRK has always been and remains our socialist brother, we need to continue to develop relations and trade with them."
- CUB_russian_bases_on_cuba: "Russian Bases on Cuba"
- CUB_russian_bases_on_cuba_desc: "Since the U.S. won't talk to us, they will now talk to the Russian armed forces."
+ CUB_russian_bases: "Russian Bases on Cuba"
+ CUB_russian_bases: "Since the U.S. won't talk to us, they will now talk to the Russian armed forces."
  CUB_cuban_socialism_with_face: "Cuban Socialism with Face"
  CUB_cuban_socialism_with_face_desc: "Finally, we have found the ideal kind of socialism for our country."
  CUB_increase_minimum_wage: "Increase the Wages of Employees"
