--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -125,10 +125,10 @@
  cuba_news.20.t: "ALBA being formed"
  cuba_news.20.d: "Today, the Governments of Cuba and Venezuela officially announce the creation of the ALBA alliance"
  cuba_news.20.a: "A new force in America?"
- cuba.32: "Russia wouldn`t protect us"
- cuba.32.t: "The Russian government refused us"
- cuba.32.d: "Russia will not come to our aid"
- cuba.32.a: "Russia...but why?"
+ cuba.72: "Russia wouldn`t protect us"
+ cuba.72.t: "The Russian government refused us"
+ cuba.72.d: "Russia will not come to our aid"
+ cuba.72.a: "Russia...but why?"
  cuba.21: "ALBA projects are successful"
  cuba.21.t: "ALBA projects are successful"
  cuba.21.d: "With the help of ALBA projects, we were able to increase our influence in other countries, save our economy, achieve energy independence and develop trade with other countries and alliances"
@@ -256,6 +256,12 @@
  cuba.65.t: "America has refused to protect us "
  cuba.65.d: "The US rejected our request, we will have to defend ourselves with one...."
  cuba.65.a: "All right"
+ cuba.73.t: "Russia will protect us"
+ cuba.73.d: "Russia will protect us. The first echelons of equipment have already left for our island."
+ cuba.73.a: "Great."
+ cuba.74.t: "Russia don't protect us"
+ cuba.74.d: "The Russian side flatly refused to defend us. We will be left alone..."
+ cuba.74.a: "Sad."
  #traits
  new_cuban: "New Cuban Leader"
  #decisions
