--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -125,10 +125,11 @@
  cuba_news.20.t: "ALBA being formed"
  cuba_news.20.d: "Today, the Governments of Cuba and Venezuela officially announce the creation of the ALBA alliance"
  cuba_news.20.a: "A new force in America?"
- cuba.72: "Russia wouldn`t protect us"
- cuba.72.t: "The Russian government refused us"
- cuba.72.d: "Russia will not come to our aid"
- cuba.72.a: "Russia...but why?"
+ cuba.72: "Cuba asks for protection "
+ cuba.72.t: "Cuba asks for protection "
+ cuba.72.d: "The Cuban government is asking us to place our bases on their island. In their opinion, there is a danger to their state from the United States. Should we agree?"
+ cuba.72.a: "Let`s Protect Them."
+ cuba.72.b: "No."
  cuba.21: "ALBA projects are successful"
  cuba.21.t: "ALBA projects are successful"
  cuba.21.d: "With the help of ALBA projects, we were able to increase our influence in other countries, save our economy, achieve energy independence and develop trade with other countries and alliances"
@@ -742,7 +743,7 @@
  CUB_trade_with_north: "Trade with DPRK"
  CUB_trade_with_north_desc: "The DPRK has always been and remains our socialist brother, we need to continue to develop relations and trade with them."
  CUB_russian_bases: "Russian Bases on Cuba"
- CUB_russian_bases: "Since the U.S. won't talk to us, they will now talk to the Russian armed forces."
+ CUB_russian_bases_desc: "Since the U.S. won't talk to us, they will now talk to the Russian armed forces."
  CUB_cuban_socialism_with_face: "Cuban Socialism with Face"
  CUB_cuban_socialism_with_face_desc: "Finally, we have found the ideal kind of socialism for our country."
  CUB_increase_minimum_wage: "Increase the Wages of Employees"
