--- a/localisation/english/MD_focus_CES_l_english.yml
+++ b/localisation/english/MD_focus_CES_l_english.yml
@@ -34,25 +34,21 @@
  UZB_karapalkstan.1.d: "This morning there was a clash between Uzbeks and Karalpaks at the local mosque. At first it was just a verbal altercation, but then it abruptly turned into a bloodbath. Both sides believe that a religion alien to them is present on their land. Whose side are we on?"
  UZB_karapalkstan.1.a: "Back the Karalpaks"
  UZB_karapalkstan.1.b: "Back the Uzbeks"
- UZB_karapalkstan.1.c: "Find a solution to please both sides"
 #
  UZB_karapalkstan.2.t: "A bar fight between Karalpaks and Uzbeks"
  UZB_karapalkstan.2.d: "A couple hours ago there was a drunken altercation between Uzbeks and Karalpaks. The conflict occurred due to differences in political views. After a couple of mutual insulting expressions, both sides got into a fierce fight with the use of external objects."
  UZB_karapalkstan.2.a: "Back the Karalpaks"
  UZB_karapalkstan.2.b: "Back the Uzbeks"
- UZB_karapalkstan.2.c: "Find a solution to please both sides"
 #
  UZB_karapalkstan.3.t: "A fight on the soccer field between local teams"
  UZB_karapalkstan.3.d: "A couple of hours ago there was a conflict between members of the Uzbek soccer team. The main reason is ethnic disagreement. As it became known, one of the participants called the other a very offensive expression, which led to unrest on the soccer field."
  UZB_karapalkstan.3.a: "Back the Karalpaks"
  UZB_karapalkstan.3.b: "Back the Uzbeks"
- UZB_karapalkstan.3.c: "Find a solution to please both sides"
 #
  UZB_karapalkstan.4.t: "Clashes During the Karapalkan Festival"
  UZB_karapalkstan.4.d: "While local Karalpaks were celebrating their national holiday, radicalized Uzbeks raided the celebrants. Several people were injured and the attackers were detained by the police. How should we deal with this?"
  UZB_karapalkstan.4.a: "Back the Karalpaks"
  UZB_karapalkstan.4.b: "Back the Uzbeks"
- UZB_karapalkstan.4.c: "Find a solution to please both sides"
  #
  KAZ_high_emigration_5: "Huge Level of Emigration"
  KAZ_high_emigration_5_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
@@ -267,28 +263,24 @@
  CES_broken_economy_idea_3_desc: "The legacy of the Soviet system of planned economy left [FROM.GetName] in a difficult position after the collapse of the USSR. The economic infrastructure was centrally managed, making the transition to a market economy a more difficult and painful process. The loss of many resource regions and dependence on energy supplies also affected [FROM.GetName]'s economy. The Republic lost access to some natural resources that were controlled by the USSR. This led to instability in the economy and a shortage of income."
 
  CES_outdated_army_idea: "Chaos in Military"
- CES_outdated_army_idea_desc: "The collapse of the USSR brought Kazakhstan into a new geopolitical environment, which created uncertainty in relations with former Soviet republics and newly independent states. This complicated the management of the armed forces and required a review of the army's strategy and structure."
+ CES_outdated_army_idea_desc: "The collapse of the USSR brought our country into a new geopolitical environment, which created uncertainty in relations with former Soviet republics and newly independent states. This complicated the management of the armed forces and required a review of the army's strategy and structure."
  CES_outdated_army_idea_1: "Disorganized Military Control"
- CES_outdated_army_idea_1_desc: "The collapse of the USSR brought Kazakhstan into a new geopolitical environment, which created uncertainty in relations with former Soviet republics and newly independent states. This complicated the management of the armed forces and required a review of the army's strategy and structure."
+ CES_outdated_army_idea_1_desc: "The collapse of the USSR brought our country into a new geopolitical environment, which created uncertainty in relations with former Soviet republics and newly independent states. This complicated the management of the armed forces and required a review of the army's strategy and structure."
  CES_outdated_army_idea_2: "Corrupt Military Control"
- CES_outdated_army_idea_2_desc: "The collapse of the USSR brought Kazakhstan into a new geopolitical environment, which created uncertainty in relations with former Soviet republics and newly independent states. This complicated the management of the armed forces and required a review of the army's strategy and structure."
+ CES_outdated_army_idea_2_desc: "The collapse of the USSR brought our country into a new geopolitical environment, which created uncertainty in relations with former Soviet republics and newly independent states. This complicated the management of the armed forces and required a review of the army's strategy and structure."
  CES_outdated_army_idea_3: "Ineffective Military Control"
- CES_outdated_army_idea_3_desc: "The collapse of the USSR brought Kazakhstan into a new geopolitical environment, which created uncertainty in relations with former Soviet republics and newly independent states. This complicated the management of the armed forces and required a review of the army's strategy and structure."
+ CES_outdated_army_idea_3_desc: "The collapse of the USSR brought our country into a new geopolitical environment, which created uncertainty in relations with former Soviet republics and newly independent states. This complicated the management of the armed forces and required a review of the army's strategy and structure."
 
  CES_army_modernization: "Army Modernisation"
  CES_army_modernization_desc: "Modernization of our army is an important key to the formation of our armed forces."
- CES_centr_warfare: "Centralized Warfare"
- CES_centr_warfare_desc: "We should take eastern centralized warfare example for our military to build upon."
- CES_networ_warfare: "Network-Centric Warfare"
- CES_networ_warfare_desc: "We should take western network-centric warfare example for our military to build upon."
- CES_partis_warfare: "Partisan Warfare"
- CES_partis_warfare_desc: "We should take partisan warfare example for our military to build upon."
+ CES_modern_warfare: "Modern Warfare"
+ CES_modern_warfare_desc: "It is necessary to adapt our army to modern realities so that we can effectively repel any external threat."
  CES_create_territorial_defence: "Establish Territorial Defence"
  CES_create_territorial_defence_desc: "The creation of territorial defense is an important aspect of the formation of our defense capability."
  CES_airforce_trainings: "Airforce Trainings"
  CES_airforce_trainings_desc: "Air Force training programs are vital for ensuring the readiness and professionalism of its aviation personnel. These programs encompass a range of activities, including flight simulations, technical skills development, and international collaborations. They are essential for enhancing the country's defense capabilities and safeguarding its airspace, contributing to national security and regional stability in Central Asia."
- CES_buying_planes: "Equipping The Airforce"
- CES_buying_planes_desc: "If our Airforce will not be equipped, it will not able to fully conduct the given missions and complete the tasks."
+ CES_new_air_doctrine: "New Air Doctrine"
+ CES_new_air_doctrine_desc: "We need to change our approach to air warfare tactics."
  CES_india_air: "Indian Planes"
  CES_india_air_desc: "We may arrange an arms deal between us and India to buy new, modern planes for our airforce."
  CES_russian_air: "Russian Planes"
@@ -1444,3 +1436,6 @@
  centralkaz.3518.t: "[FROM.GetName] have denied our offer!"
  centralkaz.3518.d: "They will not join Turkic Council."
  centralkaz.3518.a: "Ugh"
+
+ they_lowered_our_debt_tt: "§GOur debt has been lowered by them§!"
+ they_refused_lowering_our_debt_tt: "§RThey refused our proposal on lowering our debt§!"
